Production ready: Added reverse proxy, navigation fixes, and type filtering

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,6 +4,9 @@ FROM python:3.9-slim
 # Set working directory
 WORKDIR /app
 
+# Build argument for debug mode (skip downloads)
+ARG DEBUG_MODE=false
+
 # Install system dependencies
 RUN apt-get update && \
     apt-get install -y wget gzip graphviz && \
@@ -20,20 +23,35 @@ RUN mkdir -p /app/reference_genomes /app/sessions
 # Copy any pre-existing genome files (from the build context)
 COPY reference_genomes/ /app/reference_genomes/
 
-# Conditionally download and unzip genomes only if they don't exist
-RUN [ ! -f /app/reference_genomes/hg19.fa ] && \
-       wget -P /app/reference_genomes https://hgdownload.cse.ucsc.edu/goldenpath/hg19/bigZips/hg19.fa.gz && \
-       gunzip /app/reference_genomes/hg19.fa.gz || true 
+# Conditionally download and unzip genomes only if DEBUG_MODE is false and files don't exist
+RUN if [ "$DEBUG_MODE" = "false" ]; then \
+        if [ ! -f /app/reference_genomes/hg19.fa ]; then \
+            wget -P /app/reference_genomes https://hgdownload.cse.ucsc.edu/goldenpath/hg19/bigZips/hg19.fa.gz && \
+            gunzip /app/reference_genomes/hg19.fa.gz || true; \
+        fi; \
+    else \
+        echo "DEBUG_MODE: Skipping hg19 download"; \
+    fi
 
-# Download hg38 reference genome if it doesn't exist
-RUN [ ! -f /app/reference_genomes/hg38.fa ] && \
-       wget -P /app/reference_genomes https://hgdownload.soe.ucsc.edu/goldenPath/hg38/bigZips/hg38.fa.gz && \
-       gunzip /app/reference_genomes/hg38.fa.gz || true
+# Download hg38 reference genome if DEBUG_MODE is false and it doesn't exist
+RUN if [ "$DEBUG_MODE" = "false" ]; then \
+        if [ ! -f /app/reference_genomes/hg38.fa ]; then \
+            wget -P /app/reference_genomes https://hgdownload.soe.ucsc.edu/goldenPath/hg38/bigZips/hg38.fa.gz && \
+            gunzip /app/reference_genomes/hg38.fa.gz || true; \
+        fi; \
+    else \
+        echo "DEBUG_MODE: Skipping hg38 download"; \
+    fi
 
-# Download mm9 reference genome if it doesn't exist
-RUN [ ! -f /app/reference_genomes/MM9.fa ] && \
-       wget -P /app/reference_genomes https://hgdownload.soe.ucsc.edu/goldenPath/mm9/bigZips/mm9.fa.gz && \
-       gunzip /app/reference_genomes/mm9.fa.gz -c > /app/reference_genomes/MM9.fa || true
+# Download mm9 reference genome if DEBUG_MODE is false and it doesn't exist
+RUN if [ "$DEBUG_MODE" = "false" ]; then \
+        if [ ! -f /app/reference_genomes/MM9.fa ]; then \
+            wget -P /app/reference_genomes https://hgdownload.soe.ucsc.edu/goldenPath/mm9/bigZips/mm9.fa.gz && \
+            gunzip /app/reference_genomes/mm9.fa.gz -c > /app/reference_genomes/MM9.fa || true; \
+        fi; \
+    else \
+        echo "DEBUG_MODE: Skipping mm9 download"; \
+    fi
 
 # Copy the rest of the backend code
 COPY . .
