--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,30 @@
 version: '3'
 services:
+  nginx:
+    image: nginx:alpine
+    ports:
+      - "3000:80"
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+    depends_on:
+      - frontend
+      - backend
+    restart: unless-stopped
+
   frontend:
     build: ./frontend
-    ports:
-      - "3000:3000"
+    expose:
+      - "3001"
     depends_on:
       - backend
     environment:
       - CHOKIDAR_USEPOLLING=true  # Optional, can help with file watching on some systems
+      - PORT=3001
 
   backend:
-    build: ./backend
-    # Expose the backend port internally for communication with the frontend
-    ports:
-      - "4000:4000"
+    build:
+      context: ./backend
+      args:
+        DEBUG_MODE: ${DEBUG_MODE:-false}
+    expose:
+      - "4000"
