--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   nginx:
     image: nginx:alpine
     ports:
-      - "3000:80"
+      - "0.0.0.0:3000:80"
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
     depends_on:
@@ -18,7 +18,7 @@ services:
     depends_on:
       - backend
     environment:
-      - CHOKIDAR_USEPOLLING=true  # Optional, can help with file watching on some systems
+      - CHOKIDAR_USEPOLLING=true
       - PORT=3001
 
   backend:
