--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,27 +1,18 @@
 version: '3'
 services:
-  nginx:
-    image: nginx:alpine
-    ports:
-      - "3000:80"
-    volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf:ro
-    depends_on:
-      - frontend
-      - backend
-    command: sh -c "rm -f /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'"
-
   frontend:
     build: ./frontend
-    expose:
-      - "80"
+    ports:
+      - "3000:80"
     depends_on:
       - backend
+    environment:
+      - BACKEND_URL=http://backend:4000
 
   backend:
     build:
       context: ./backend
       args:
         DEBUG_MODE: ${DEBUG_MODE:-false}
-    expose:
-      - "4000"
+    ports:
+      - "4000:4000"
