--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -10,6 +10,9 @@ RUN npm run build
 # Production stage - use nginx to serve static files
 FROM nginx:alpine
 
+# Copy custom nginx configuration
+COPY nginx.conf /etc/nginx/conf.d/default.conf
+
 # Copy the build output to nginx html directory
 COPY --from=build /app/build /usr/share/nginx/html
 
