Revert to React dev server to match working commit

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,11 +3,11 @@ services:
   frontend:
     build: ./frontend
     ports:
-      - "3000:80"
+      - "3000:3000"
     depends_on:
       - backend
     environment:
-      - BACKEND_URL=http://backend:4000
+      - CHOKIDAR_USEPOLLING=true
 
   backend:
     build:
