Switch to network_mode: host to resolve connectivity issues

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,7 @@ version: '3'
 services:
   frontend:
     build: ./frontend
-    ports:
-      - "3000:3000"
+    network_mode: "host"
     depends_on:
       - backend
     environment:
@@ -14,5 +13,4 @@ services:
       context: ./backend
       args:
         DEBUG_MODE: ${DEBUG_MODE:-false}
-    ports:
-      - "4000:4000"
+    network_mode: "host"
